k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: currency-converter-service
spec:
  type: ClusterIP
  selector:
    app: currency-converter
  ports:
  - port: 5555
    targetPort: 5555
